--- a/views/layout.haml
+++ b/views/layout.haml
@@ -4,16 +4,17 @@
 		%title Feed Analyser
 		%meta{:name => "viewport", :content => "width=device-width, initial-scale=1.0"}
 		%link{:rel=>"stylesheet", :href=>"//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"}
+		%link{:rel=>"stylesheet", :href=>"/styles.css"}
 		%script{:src=>"//code.jquery.com/jquery-2.1.3.min.js"}
 		%script{:src=>"/app.js"}
 	%body
 		%main
-			.container
+			#header
 				.col-md-6.col-md-offset-3{:style => "text-align: center;"}
 					%h1= 'Bienvenido'
 					%form.form-inline
 						%input.form-control{:id => 'search', :name => 'search', :type => 'text', :placeholder => 'Buscar', :value => @search}
 						%input.btn.btn-default{:id => 'go', :type => 'submit'}
-			.col-md-12
+			#container.col-md-12				
 				= yield		
 		%footer
