--- a/views/index.haml
+++ b/views/index.haml
@@ -3,9 +3,12 @@
 	#patents.col-md-4
 		%h2= 'Patentes'
 		%img.loader{:src => '/loader_big.gif', :alt => 'loader'}
+		.data
 	#academic.col-md-4
 		%h2= 'Académico'
 		%img.loader{:src => '/loader_big.gif', :alt => 'loader'}
+		.data
 	#news.col-md-4
 		%h2= 'Noticias'
 		%img.loader{:src => '/loader_big.gif', :alt => 'loader'}
+		.data
